# monty-hall-eval

./: .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  README.md  devenv.nix  main_modal.py  pyproject.toml  secrets.env
.github/workflows/: bump-version.yml
docs/: index.html  viewer.html
docs/logs/: 2026-05-10T20-58-36-00-00_standard-monty_W4Ra3jVavj7SFWbgZcwg8V.eval  2026-05-10T20-58-37-00-00_standard-monty_VVvHt7fHStAE3EdQXXnT9Z.eval  2026-05-10T21-11-53-00-00_generalized-monty_8PjFym5x8m5XRKmZBYs735.eval  2026-05-10T21-14-12-00-00_generalized-monty_MAcWZfGRggP4AKmWrDFiZj.eval  2026-05-10T21-16-03-00-00_generalized-monty_gDiwQf67GLjtz2CPqpvYcR.eval  2026-05-10T21-39-13-00-00_generalized-monty_8vSK3ZyH79iTRyYYBQamJg.eval  2026-05-10T21-51-46-00-00_generalized-monty_Tz8AfxSJkcbQXoqvAQ7Zzd.eval  2026-05-10T22-26-41-00-00_generalized-monty_HGDkoz2Mx2bLZYjmD8TvKb.eval  2026-05-10T22-29-59-00-00_generalized-monty_gNsLfFHcgmPUuTgd4tkq6U.eval  listing.json
logs/: 2026-05-10T20-58-39-00-00_generalized-monty_TbGtGA6X8X43zAnArJ6txx.eval  2026-05-10T20-58-40-00-00_generalized-monty_F3XsMpTwHqzgvkbFZTAuXm.eval  2026-05-10T21-16-02-00-00_generalized-monty_dodM6z2VC2E9F37a9DmhW4.eval  2026-05-10T21-36-30-00-00_generalized-monty_bjpjgq6mtsFv8WcSrtEUJf.eval  2026-05-10T21-39-14-00-00_generalized-monty_KNnxbw78nF7m57cNGV8QaP.eval  2026-05-10T21-50-28-00-00_generalized-monty_ULQUE7ELTzx7mCG8BVrQJp.eval  2026-05-10T21-51-47-00-00_generalized-monty_NiqM3pDKeTNZaegTEtXESa.eval  2026-05-10T21-53-54-00-00_generalized-monty_gNsLfFHcgmPUuTgd4tkq6U.eval  2026-05-10T21-53-55-00-00_generalized-monty_HGDkoz2Mx2bLZYjmD8TvKb.eval
report/: main.tex  references.bib
src/: common.py  generalized_monty.py  main.py  monty_hall.py  standard_monty.py
