[project]
name = "monty-hall-eval"
version = "0.4.0"
description = "Multi-turn agentic Monty Hall eval using Inspect AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inspect-ai>=0.3",
    "openai>=2.36.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
bump_message = "bump: version $current_version → $new_version"
major_version_zero = true
